@@ -5,7 +5,8 @@ New Features:
 
   * Signficant updates to the syntax parser, including support for additional
     HTML tags and XHTML transitional validation of tag attributes.
-  * Support the #if: parser function.  Usage: {{#if: test | true | false}}.
+  * Support the #if: and the #ifeq parser functions.  Usage:
+    "{{#if: test | true | false}}" and "{{#ifeq: 1 | 2 | true | false}}".
   * Basic support for the #expr: parser function.  Only basic operations are
     supported (+, -, /, *) and parentheses must be used to ensure that the
     order of operations is followed.
